actualizacion de marcas

--- a/index.html
+++ b/index.html
@@ -35,25 +35,27 @@
 
     <div class="titulo">Nuestras Marcas</div> 
     <div id="marcas">
-      <div class="info">
-         <img src="./fotos/lahuaka.png" alt="foto de calidad" height="300" width="300">
-      </div>
-      <div class="info">
-         <img src="./fotos/getout.png" alt="original foto" height="300" width="300">
-      </div>
-      <div class="info">
-         <img src="./fotos/daze.png" alt="menor precio" height="300" width="300">
-      </div>     
-      <div class="info">
-        <img src="./fotos/haunted.png" alt="foto de calidad" height="300" width="300">
-     </div>
-     <div class="info">
-        <img src="./fotos/latribu.png" alt="original foto" height="300" width="300">
-     </div>
-     <div class="info">
-        <img src="./fotos/motion.png" alt="menor precio" height="300" width="300">
-     </div>     
+        <div class="contenedor">
+          <div class="info">
+             <img src="./fotos/lahuaka.png" alt="foto de calidad" height="350" width="350">
+          </div>
+          <div class="info">
+             <img src="./fotos/getout.png" alt="original foto" height="350" width="350">
+          </div>
+          <div class="info">
+             <img src="./fotos/daze.png" alt="menor precio" height="350" width="350">
+          </div>     
+          <div class="info">
+              <img src="./fotos/haunted.png" alt="foto de calidad" height="350" width="350">
+          </div>
+          <div class="info">
+               <img src="./fotos/latribu.png" alt="original foto" height="350" width="350">
+          </div>
+          <div class="info">
+             <img src="./fotos/motion.png" alt="menor precio" height="350" width="350">
+          </div>    
+       </div> 
    </div>
-    </div>
+    
 </body>
 </html>
