--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <header>
         <div class="menu">
          <div class="logo">ticketplus</div>
-         <nav class="site-nav">
+         <nav class="nav-menu">
             <ul>
                 <li><a href="#nosotros"><i class="fa-solid fa-house"></i>Nosotros</a></li>
                 <li><a href="#superclub"><i class="fa-solid fa-star"></i>Superclub</a></li>
-                <li><a href="#marcas"><i class="fa-solid fa-ticket"></i>Marcas</a></li>
+                <li><a href="#entrada-marca"><i class="fa-solid fa-ticket"></i>Marcas</a></li>
             </ul>
          </nav>
         </div>
@@ -26,16 +26,18 @@
         <source src="./fotos/videohuaka.mp4" type="video/mp4">
     </video>
     <section id="nosotros">
+        
         <img src="./fotos/escenario.png" alt="imagen de escenario">
         <div class="texto-nosotros">
             <h1>WELCOME TO SUPERCLUB</h1>
             <h3>EN SUPERCLUB, CREEMOS EN EL PODER TRANSFORMADOR DE LA MÚSICA ELECTRÓNICA. ES UNA FUERZA QUE NOS UNE, NOS DESAFÍA Y NOS LLEVA A EXPLORAR NUEVOS HORIZONTES JUNTOS. AL MIRAR HACIA EL FUTURO, NOS ENCANTA SEGUIR SIENDO PIONEROS EN LA ESCENA, INVITÁNDOTE A FORMAR PARTE DE NUESTRA FAMILIA EN CRECIMIENTO Y A SEGUIR ESCRIBIENDO ESTA HISTORIA JUNTOS.</h3>
+            <a href="https://www.instagram.com/superclub.peru/?hl=es" class="button" rel="noopener noreferrer" target="_blank">Instagram</a>
         </div>
     </section>
 
-    <div class="titulo">Nuestras Marcas</div> 
-    <div id="marcas">
-        <div class="contenedor">
+    <div id="entrada-marca">Nuestras Marcas</div>
+    <section id="marcas">
+        <div class="contenedor-marca">
           <div class="info">
              <img src="./fotos/lahuaka.png" alt="foto de calidad" height="350" width="350">
           </div>
@@ -55,7 +57,29 @@
              <img src="./fotos/motion.png" alt="menor precio" height="350" width="350">
           </div>    
        </div> 
-   </div>
+    </section>
+    <section id="baila-recicla">
+        <img src="./fotos/agua.png" alt="agua" height="400" width="400">
+        <div class="texto-recicla">
+            <h1>DANCE & RECYCLE</h1>
+            <h3>NUESTRA VISIÓN VA MÁS ALLÁ DE LA PISTA DE BAILE. TENEMOS UN FIRME COMPROMISO CON LAS PRÁCTICAS SOSTENIBLES, COMO LA INTRODUCCIÓN DEL AGUA INTELIGENTE SUPERCLUB EN LATAS RECICLABLES. DEMOSTRAMOS NUESTRA DEDICACIÓN AL BIENESTAR DE NUESTRA COMUNIDAD Y DEL PLANETA. ESTAS INICIATIVAS REFLEJAN NUESTRA CREENCIA EN LA RESPONSABILIDAD SOCIAL Y AMBIENTAL, INTEGRANDO LA SUSTENTABILIDAD EN EL CENTRO DE NUESTRA EXPERIENCIA DE FIESTA.</h3>
+        </div>
+    </section>
+
+    <section class="demostracion">
+        <ol class="ordenada">
+            <li>hola</li>
+            <li>perro</li>
+            <li>gato</li>
+        </ol>
+        <ul class="personalizado">
+            <li>Rodrigo Barraza</li>
+            <li>joel Gonzales</li>
+            <li>Nikolas de las Casas</li>
+            <li>francesca Maldini</li>
+        </ul>
+
+    </section>
     
 </body>
 </html>
