se agrega seccion de videos

--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@
             <h3>NUESTRA VISIÓN VA MÁS ALLÁ DE LA PISTA DE BAILE. TENEMOS UN FIRME COMPROMISO CON LAS PRÁCTICAS SOSTENIBLES, COMO LA INTRODUCCIÓN DEL AGUA INTELIGENTE SUPERCLUB EN LATAS RECICLABLES. DEMOSTRAMOS NUESTRA DEDICACIÓN AL BIENESTAR DE NUESTRA COMUNIDAD Y DEL PLANETA. ESTAS INICIATIVAS REFLEJAN NUESTRA CREENCIA EN LA RESPONSABILIDAD SOCIAL Y AMBIENTAL, INTEGRANDO LA SUSTENTABILIDAD EN EL CENTRO DE NUESTRA EXPERIENCIA DE FIESTA.</h3>
         </div>
     </section>
+    <div class="titulo-video"><h1>Mas de Nosotros</h1></div>
+    <section class="videos">
+        <video controls class="moti">
+           <source src="./fotos/motionx.mp4" type="video/mp4">
+        </video>
+        <iframe src="https://www.youtube.com/embed/ZGwPBV8-gpA" title="YouTube video" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com//embed/eTGN9aJW45k" title="YouTube video" frameborder="0" allowfullscreen></iframe>
+    </section>
 
     <section class="demostracion">
         <ol class="ordenada">
