--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
          <nav class="nav-menu">
             <ul>
                 <li><a href="#nosotros"><i class="fa-solid fa-house"></i>Nosotros</a></li>
-                <li><a href="#superclub"><i class="fa-solid fa-star"></i>Superclub</a></li>
+                <li><a href="#titulo-video"><i class="fa-solid fa-star"></i>Superclub</a></li>
                 <li><a href="#entrada-marca"><i class="fa-solid fa-ticket"></i>Marcas</a></li>
             </ul>
          </nav>
@@ -64,30 +64,39 @@
             <h1>DANCE & RECYCLE</h1>
             <h3>NUESTRA VISIÓN VA MÁS ALLÁ DE LA PISTA DE BAILE. TENEMOS UN FIRME COMPROMISO CON LAS PRÁCTICAS SOSTENIBLES, COMO LA INTRODUCCIÓN DEL AGUA INTELIGENTE SUPERCLUB EN LATAS RECICLABLES. DEMOSTRAMOS NUESTRA DEDICACIÓN AL BIENESTAR DE NUESTRA COMUNIDAD Y DEL PLANETA. ESTAS INICIATIVAS REFLEJAN NUESTRA CREENCIA EN LA RESPONSABILIDAD SOCIAL Y AMBIENTAL, INTEGRANDO LA SUSTENTABILIDAD EN EL CENTRO DE NUESTRA EXPERIENCIA DE FIESTA.</h3>
         </div>
+        <div class="cuadrado">Baila!</div>
     </section>
-    <div class="titulo-video"><h1>Mas de Nosotros</h1></div>
+    <div id="titulo-video"><h1>Mas de Nosotros</h1></div>
     <section class="videos">
-        <video controls class="moti">
+        <video controls class="video-guardado">
            <source src="./fotos/motionx.mp4" type="video/mp4">
         </video>
         <iframe src="https://www.youtube.com/embed/ZGwPBV8-gpA" title="YouTube video" frameborder="0" allowfullscreen></iframe>
         <iframe src="https://www.youtube.com//embed/eTGN9aJW45k" title="YouTube video" frameborder="0" allowfullscreen></iframe>
     </section>
 
-    <section class="demostracion">
-        <ol class="ordenada">
-            <li>hola</li>
-            <li>perro</li>
-            <li>gato</li>
-        </ol>
-        <ul class="personalizado">
-            <li>Rodrigo Barraza</li>
-            <li>joel Gonzales</li>
-            <li>Nikolas de las Casas</li>
-            <li>francesca Maldini</li>
-        </ul>
-
+    <section class="eventos-empleados">
+        <div class="lista-eventos">
+            <p>Proximos Eventos:</p>
+           <ol class="lista-ordenada">
+              <li>Elrow 12/10</li>
+              <li>Flow 31/10</li>
+              <li>Get out 22/11</li>
+              <li>Huaka 15/01</li>
+           </ol>
+        </div>
+        <div class="best-empleados">
+            <p>Mejores empleados</p>
+            <ol class="personalizado">
+               <li>Chino Ruiz</li>
+               <li>Edmundo Miranda</li>
+               <li>Niko Arana</li>
+               <li>Tiago Ruiz</li>
+           </ol>
+        </div>
     </section>
-    
+    <footer class="footer">
+        <div class="derechos">Copyright © 2025 by MazziniCreative . All Rights Reserved</div>
+    </footer>
 </body>
 </html>
