pagina terminada y funcional

--- a/index.html
+++ b/index.html
@@ -25,8 +25,13 @@
     <video class="intro-superclub" autoplay muted loop>
         <source src="./fotos/videohuaka.mp4" type="video/mp4">
     </video>
+  <nav class="menu-secundario">
+    <ul>
+      <li><a href="./entradas.html">Entradas</a></li>
+      <li><a href="./contacto.html">Contacto</a></li>
+    </ul>
+  </nav>
     <section id="nosotros">
-        
         <img src="./fotos/escenario.png" alt="imagen de escenario">
         <div class="texto-nosotros">
             <h1>WELCOME TO SUPERCLUB</h1>
@@ -34,7 +39,6 @@
             <a href="https://www.instagram.com/superclub.peru/?hl=es" class="button" rel="noopener noreferrer" target="_blank">Instagram</a>
         </div>
     </section>
-
     <div id="entrada-marca">Nuestras Marcas</div>
     <section id="marcas">
         <div class="contenedor-marca">
@@ -74,7 +78,6 @@
         <iframe src="https://www.youtube.com/embed/ZGwPBV8-gpA" title="YouTube video" frameborder="0" allowfullscreen></iframe>
         <iframe src="https://www.youtube.com//embed/eTGN9aJW45k" title="YouTube video" frameborder="0" allowfullscreen></iframe>
     </section>
-
     <section class="eventos-empleados">
         <div class="lista-eventos">
             <p>Proximos Eventos:</p>
